--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "cara",
-  "description": "Playful and Colorful One-Page portfolio featuring Parallax effects and animations",
-  "version": "0.2.9",
+  "name": "return-of-clark-the-donut-king",
+  "description": "A portfolio page for Clark Eidt, Pigeon's unofficial 'Donut King'.",
+  "version": "2.0.0",
   "author": "LekoArts <hello@lekoarts.de>",
   "license": "0BSD",
   "starter-name": "gatsby-starter-portfolio-cara",
